# mergefix

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/mergefix/: __init__.py  cli.py  conflict.py  git_utils.py  parser.py  providers.py  resolver.py
tests/: test_cli.py  test_conflict.py  test_git_utils.py  test_integration_llm.py  test_parser.py  test_providers.py  test_resolver.py
