[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergefix"
version = "0.2.0"
description = "AI-powered git merge conflict resolver — fix conflicts in seconds, not minutes"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "anthropic>=0.20",
    "openai>=1.0",
    "python-dotenv>=1.0",
]
keywords = ["git", "merge", "conflicts", "ai", "llm", "claude", "openai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/faw21/mergefix"
Repository = "https://github.com/faw21/mergefix"

[project.scripts]
mergefix = "mergefix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mergefix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
